sample latex build

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,17 @@ project/plugins/project/
 
 *.class
 *.log
+
+
+#latex
+*.aux
+*.lof
+*.log
+*.lot
+*.fls
+*.out
+*.toc
+*.fmt
+*.fot
+*.cb
+*.cb2
